@@ -86,6 +86,22 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|ZkNodeProps
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|stats
@@ -648,6 +664,163 @@ block|}
 block|}
 return|return
 name|orderedChildren
+return|;
+block|}
+comment|/**    * Returns true if the queue contains a task with the specified async id.    */
+DECL|method|containsTaskWithRequestId
+specifier|public
+name|boolean
+name|containsTaskWithRequestId
+parameter_list|(
+name|String
+name|requestId
+parameter_list|)
+throws|throws
+name|KeeperException
+throws|,
+name|InterruptedException
+block|{
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|childNames
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|childNames
+operator|=
+name|zookeeper
+operator|.
+name|getChildren
+argument_list|(
+name|dir
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+operator|.
+name|NoNodeException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+for|for
+control|(
+name|String
+name|childName
+range|:
+name|childNames
+control|)
+block|{
+if|if
+condition|(
+name|childName
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|ZkNodeProps
+name|message
+init|=
+name|ZkNodeProps
+operator|.
+name|load
+argument_list|(
+name|zookeeper
+operator|.
+name|getData
+argument_list|(
+name|dir
+operator|+
+literal|"/"
+operator|+
+name|childName
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|message
+operator|.
+name|containsKey
+argument_list|(
+name|OverseerCollectionProcessor
+operator|.
+name|ASYNC
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|">>>> {}"
+argument_list|,
+name|message
+operator|.
+name|get
+argument_list|(
+name|OverseerCollectionProcessor
+operator|.
+name|ASYNC
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|message
+operator|.
+name|get
+argument_list|(
+name|OverseerCollectionProcessor
+operator|.
+name|ASYNC
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|requestId
+argument_list|)
+condition|)
+return|return
+literal|true
+return|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+operator|.
+name|NoNodeException
+name|e
+parameter_list|)
+block|{
+comment|// Another client removed the node first, try next
+block|}
+block|}
+block|}
+return|return
+literal|false
 return|;
 block|}
 comment|/**    * Return the head of the queue without modifying the queue.    *     * @return the data at the head of the queue.    */
