@@ -525,6 +525,20 @@ operator|.
 name|cloud
 operator|.
 name|DistributedQueue
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|cloud
+operator|.
+name|DistributedQueue
 operator|.
 name|QueueEvent
 import|;
@@ -2046,6 +2060,54 @@ literal|"found "
 operator|+
 name|requestId
 operator|+
+literal|" in running tasks"
+argument_list|)
+expr_stmt|;
+name|results
+operator|.
+name|add
+argument_list|(
+literal|"status"
+argument_list|,
+name|success
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|overseerCollectionQueueContains
+argument_list|(
+name|requestId
+argument_list|)
+condition|)
+block|{
+name|SimpleOrderedMap
+name|success
+init|=
+operator|new
+name|SimpleOrderedMap
+argument_list|()
+decl_stmt|;
+name|success
+operator|.
+name|add
+argument_list|(
+literal|"state"
+argument_list|,
+literal|"submitted"
+argument_list|)
+expr_stmt|;
+name|success
+operator|.
+name|add
+argument_list|(
+literal|"msg"
+argument_list|,
+literal|"found "
+operator|+
+name|requestId
+operator|+
 literal|" in submitted tasks"
 argument_list|)
 expr_stmt|;
@@ -2123,6 +2185,39 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|overseerCollectionQueueContains
+specifier|private
+name|boolean
+name|overseerCollectionQueueContains
+parameter_list|(
+name|String
+name|asyncId
+parameter_list|)
+throws|throws
+name|KeeperException
+throws|,
+name|InterruptedException
+block|{
+name|DistributedQueue
+name|collectionQueue
+init|=
+name|coreContainer
+operator|.
+name|getZkController
+argument_list|()
+operator|.
+name|getOverseerCollectionQueue
+argument_list|()
+decl_stmt|;
+return|return
+name|collectionQueue
+operator|.
+name|containsTaskWithRequestId
+argument_list|(
+name|asyncId
+argument_list|)
+return|;
 block|}
 DECL|method|handleResponse
 specifier|private
@@ -2284,6 +2379,11 @@ name|getOverseerRunningMap
 argument_list|()
 operator|.
 name|contains
+argument_list|(
+name|asyncId
+argument_list|)
+operator|||
+name|overseerCollectionQueueContains
 argument_list|(
 name|asyncId
 argument_list|)
