@@ -312,6 +312,9 @@ expr_stmt|;
 name|testTaskExclusivity
 argument_list|()
 expr_stmt|;
+name|testDeduplicationOfSubmittedTasks
+argument_list|()
+expr_stmt|;
 name|testLongAndShortRunningParallelApiCalls
 argument_list|()
 expr_stmt|;
@@ -793,6 +796,166 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testDeduplicationOfSubmittedTasks
+specifier|private
+name|void
+name|testDeduplicationOfSubmittedTasks
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
+name|SolrServer
+name|server
+init|=
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|getBaseUrl
+argument_list|(
+operator|(
+name|HttpSolrServer
+operator|)
+name|clients
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|CollectionAdminRequest
+operator|.
+name|createCollection
+argument_list|(
+literal|"ocptest_shardsplit2"
+argument_list|,
+literal|4
+argument_list|,
+literal|"conf1"
+argument_list|,
+name|server
+argument_list|,
+literal|"3000"
+argument_list|)
+expr_stmt|;
+name|CollectionAdminRequest
+operator|.
+name|splitShard
+argument_list|(
+literal|"ocptest_shardsplit2"
+argument_list|,
+name|SHARD1
+argument_list|,
+name|server
+argument_list|,
+literal|"3001"
+argument_list|)
+expr_stmt|;
+name|CollectionAdminRequest
+operator|.
+name|splitShard
+argument_list|(
+literal|"ocptest_shardsplit2"
+argument_list|,
+name|SHARD2
+argument_list|,
+name|server
+argument_list|,
+literal|"3002"
+argument_list|)
+expr_stmt|;
+comment|// Now submit another task with the same id. At this time, hopefully the previous 2002 should still be in the queue.
+name|CollectionAdminResponse
+name|response
+init|=
+name|CollectionAdminRequest
+operator|.
+name|splitShard
+argument_list|(
+literal|"ocptest_shardsplit2"
+argument_list|,
+name|SHARD1
+argument_list|,
+name|server
+argument_list|,
+literal|"3002"
+argument_list|)
+decl_stmt|;
+name|NamedList
+name|r
+init|=
+name|response
+operator|.
+name|getResponse
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Duplicate request was supposed to exist but wasn't found. De-duplication of submitted task failed."
+argument_list|,
+literal|"Task with the same requestid already exists."
+argument_list|,
+name|r
+operator|.
+name|get
+argument_list|(
+literal|"error"
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|3001
+init|;
+name|i
+operator|<=
+literal|3002
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|state
+init|=
+name|getRequestStateAfterCompletion
+argument_list|(
+name|i
+operator|+
+literal|""
+argument_list|,
+literal|30
+argument_list|,
+name|server
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Task "
+operator|+
+name|i
+operator|+
+literal|" did not complete, final state: "
+operator|+
+name|state
+argument_list|,
+name|state
+operator|.
+name|equals
+argument_list|(
+literal|"completed"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testLongAndShortRunningParallelApiCalls
 specifier|private
 name|void
@@ -890,13 +1053,6 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|5000
-argument_list|)
-expr_stmt|;
 name|SolrServer
 name|server
 init|=
@@ -943,12 +1099,11 @@ argument_list|)
 decl_stmt|;
 while|while
 condition|(
-operator|!
 name|state
 operator|.
 name|equals
 argument_list|(
-literal|"running"
+literal|"submitted"
 argument_list|)
 condition|)
 block|{
@@ -961,28 +1116,11 @@ argument_list|,
 name|server
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|state
-operator|.
-name|equals
-argument_list|(
-literal|"completed"
-argument_list|)
-operator|||
-name|state
-operator|.
-name|equals
-argument_list|(
-literal|"failed"
-argument_list|)
-condition|)
-break|break;
 name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|100
+literal|10
 argument_list|)
 expr_stmt|;
 block|}
